--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,26 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@utility container {
+    margin-inline: auto;
+    padding-inline: 1.25rem;
+    /* = 20px */
+
+    @media (min-width: 1024px) {
+        padding-inline: 5rem;
+        /* = 80px */
+    }
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+@layer components {
+    .btn {
+        @apply px-4 py-2 rounded-lg font-medium items-center justify-center tracking-tight
+    }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+    .btn-primary {
+        @apply bg-black text-white;
+    }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+    .btn-text {
+        @apply text-black bg-transparent;
+    }
 }
