--- a/app/globals.css
+++ b/app/globals.css
@@ -23,4 +23,8 @@
     .btn-text {
         @apply text-black bg-transparent;
     }
+
+    .logo-ticker-image {
+        @apply h-8 w-auto;
+    }
 }
