fixing feature section

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,10 @@
         @apply px-4 py-2 rounded-lg font-medium items-center justify-center tracking-tight
     }
 
+    .btn2 {
+        @apply py-2 rounded-lg font-medium items-center justify-center tracking-tight text-left
+    }
+
     .btn-primary {
         @apply bg-black text-white;
     }
@@ -50,5 +54,9 @@
 
     .card{
         @apply p-10 border border-[#222222]/10  rounded-3xl shadow-[0_7px_14px_#EAEAEA] max-w-xs w-full
+    }
+
+    .align-text{
+        @apply flex flex-col gap-2 
     }
 }
